ht_sfNewsCenter/src/objects/Implementation_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Implementation Plans</relationshipLabel>
        <relationshipName>Implementation_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_Order_Status__c</fullName>
        <label>Check Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Implementation Plans</relationshipLabel>
        <relationshipName>Implementation_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Implementation Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Implementation Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Implementation Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>